# Project_Detritus

./: CMakeLists.txt  README.md
data/Levels/: Test.json  Test.xml
data/Objects/Creatures/: PC.json
data/Sprites/Character/: character.scml  character.xml
data/Sprites/LevelBackgrounds/: TestLevelBackground.json  TestLevelBackground.xml
src/: CMakeLists.txt  animation.cpp  animation.hpp  application.cpp  application.hpp  character.cpp  character.hpp  creature.cpp  creature.hpp  level.cpp  level.hpp  log.hpp  main.cpp  obstacle.cpp  obstacle.hpp  obstacle_spawner.cpp  obstacle_spawner.hpp  sprite.cpp  sprite.hpp
src/cmake/: FindBox2D.cmake
src/graphic/: CMakeLists.txt  node.cpp  node.hpp  sprite.cpp  sprite.hpp
src/resource_manager/: CMakeLists.txt  resource_manager.hpp
